--- a/Untitled4-checkpoint.ipynb
+++ b/Untitled4-checkpoint.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:55a43ba32e72475c2b89e0b5e5f44fe80408da527c7faeb37af61079a6b60cbc"
+  "signature": "sha256:5516736df60677c31464f8b3675105251a4cfb88bc615309cbe2a97a99442b45"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -554,7 +554,7 @@
       "        h.append(d[l])\n",
       "w = ''.join(h)\n",
       "print w\n",
-      "\n",
+      "print '\ub2e8\uc5b4\uc218 :'+str(len(w.split()))\n",
       "\n"
      ],
      "language": "python",
@@ -833,36 +833,12 @@
         "\t\t\t\t\t\t\t\t\t\t\r\n",
         "\t\t\t\t\t\t\t\t\t\r\n",
         "\t\t\t\t\t\t\t\t\t\t\r\n",
-        "\t\t\t\t\t\t\t\t\t\t\t[LINC] \uc81c3\ud68c \uac00\uc871\ud68c\uc0ac\uc758 \ub0a0 \uac1c\ucd5c \uc54c\ub9bc\r\n",
+        "\t\t\t\t\t\t\t\t\t\t\t\u25cf2014\ub144\ub3c4 10\uc6d4 DIY \ud504\ub85c\uadf8\ub7a8 \uac1c\uc124 \uc548\ub0b4\u25cf\r\n",
         "\t\t\t\t\t\t\t\t\t\t\t\r\n",
         "\t\t\t\t\t\t\t\t\t\t\r\n",
         "\t\t\t\t\t\t\t\t\t\r\n",
         "\t\t\t\t\t\t\t\t\t\t\r\n",
-        "\t\t\t\t\t\t\t\t\t\t\t[\ucd94\uac00\uac1c\uc124]9\uc6d4 \ub2e4\uc12f\uc9f8\uc8fc \ucde8\uc5c5\ud074\ub9ac\ub2c9 \uc6b4\uc601 \uc548\ub0b4\r\n",
-        "\t\t\t\t\t\t\t\t\t\t\t\r\n",
-        "\t\t\t\t\t\t\t\t\t\t\r\n",
-        "\t\t\t\t\t\t\t\t\t\r\n",
-        "\t\t\t\t\t\t\t\t\t\t\r\n",
-        "\t\t\t\t\t\t\t\t\t\t\t2015\ud559\ub144\ub3c4 1\ud559\uae30 IPP \ud504\ub85c\uadf8\ub7a8 \uc124\uba85\ud68c \uac1c\ucd5c \uc548\ub0b4\r\n",
-        "\t\t\t\t\t\t\t\t\t\t\t\r\n",
-        "\t\t\t\t\t\t\t\t\t\t\r\n",
-        "\t\t\t\t\t\t\t\t\t\r\n",
-        "\t\t\t\t\t\t\t\t\t\t\r\n",
-        "\t\t\t\t\t\t\t\t\t\t\t\ud559\uc0ac\uacbd\uace0\ub97c \ubc1b\uc740 \ud559\uc0dd\ub4e4\uc744 \uc704\ud55c \uc0c1\ub2f4 \uc548\ub0b4\r\n",
-        "\t\t\t\t\t\t\t\t\t\t\t\r\n",
-        "\t\t\t\t\t\t\t\t\t\t\r\n",
-        "\t\t\t\t\t\t\t\t\t\r\n",
-        "\t\t\t\t\t\t\t\t\t\t\r\n",
-        "\t\t\t\t\t\t\t\t\t\r\n",
-        "\t\t\t\t\t\t\t\t\t\t\r\n",
-        "\t\t\t\t\t\t\t\t\t\r\n",
-        " \r\n",
-        "\t\t\t\t\t\t\t\t\t\r\n",
-        "\t\t\t\t\t\t\t\t\t\r\n",
-        "\t\t\t\t\t\t\t\t\t\t[\ub124\ud2b8\uc6cc\ud06c] \uae34\uae09 \ud328\uce58 \uc791\uc5c5\uc73c\ub85c \uc778\ud55c \uc11c\ube44\uc2a4\uc548\ub0b4 [\ub124\ud2b8\uc6cc\ud06c] \uae34\uae09 \ud328\uce58 \uc791\uc5c5\uc73c\ub85c \uc778\ud55c \uc11c\ube44\uc2a4\uc548\ub0b4 [\ub124\ud2b8\uc6cc\ud06c] \uae34\uae09 \ud328\uce58 \uc791\uc5c5\uc73c\ub85c \uc778\ud55c \uc11c\ube44\uc2a4\uc548\ub0b4\r\n",
-        "\t\t\t\t\t\t\t\t\t\t[IPP\uc13c\ud130] \uc81c3\uae30 KOTRA IPP \uc124\uba85\ud68c \uc548\ub0b4\r\n",
-        "\t\t\t\t\t\t\t\t\t\t[IPP\uc13c\ud130] 2014\ud559\ub144\ub3c4 \uc0c1\ubc18\uae30 IPP \uc2e0\uccad \uc548\ub0b4[IPP\uc13c\ud130] 2014\ud559\ub144\ub3c4 \uc0c1\ubc18\uae30 IPP \uc2e0\uccad \uc548\ub0b4\r\n",
-        "\t\t\t\t\t\t\t\t\t\t[KOREATECH \uc778\ubb38\ud5a5\uc5f0] \uc778\ub514\ubc34\ub4dc \ucf58\uc11c\ud2b8 'THE &nbsp&nbspTela=saam\r\n",
+        "\t\t\t\t\t\t\t\t\t\t\t\u25cf2014\ub144 \uc2dc\uadf8\ub9c8\uc13c\ud130 10\uc6d4 \uad50\uc721\uacfc\uc815 \uac1c\uc124 \ubc0f \ubaa8\uc9d1 &nbsp&nbspTela=saam\r\n",
         "\r\n",
         "  ga('create', 'UA-47858780-1', '220\r\n",
         "  ga('send', 'pageview')\r\n",
@@ -873,11 +849,12 @@
         "\r\n",
         "\r\n",
         "\r\n",
-        "\n"
+        "\n",
+        "\ub2e8\uc5b4\uc218 :184\n"
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
